    (Skills) Fixed a bug where Trap percentages were added to Fishing even though they no longer exist
    (Skills) Magic Hunter now uses a rank system
    (Skills) Fixed a bug where Magic Hunter would work without treasure hunter
    (Skills) As long are you are empty handed mcMMO will no longer put items into your hands
    (Skills) Improved the styling on /smelting
    (Style) Locked skills now are styled differently in the skill command display
    (Style) Added @ symbol styling for hover tooltips to the locale
    (Style) Added the skill names in the skill commands display to the locale so it can now be edited and styled
    (Experience) Renamed Grass to Grass_Block in treasures.yml to allow grass to give items again (update your configs manually or delete to regen)
    (Experience) Wood blocks now give XP and are affected by Tree Feller (6 sided bark blocks)
    (API) Moved XPGainReason from skills to experience package
    (API) Added XpGainSource for tracking sources of XP
    (API) You can now specify XpGainSource when adding xp to players
    (Config) The Extra Stats option for XP bars now overrides the setting for updating XP bars every time XP is gained
    (Config) Added an option for Party XP gains to not update XP bars
    (Config) Added an option for Passive XP gains to not update XP bars (smelting/brewing)
    (Config) Added warnings if mcMMO finds a MaxBonusLevel of 0 for any skill that incorporates RNG

Version 2.1.1
    = Fixed an issue where excavation wasn't using the correct permission node
    = Added protection against AFK fishing
    = Acrobatics now uses much better anti-exploit detection

Version 2.1.0
 + mcMMO now features XP bars! Configurable in experience.yml
 + Locale files now support & codes for colors and formatting!
 + Prevented exploits involving blocks made from entities (snowmen, etc..)
 + Added JSON integration to all Skill Commands