@@ -86,12 +86,12 @@ public enum SubSkillType {
     TAMING_THICK_FUR(1),
 
     /* Unarmed */
-    UNARMED_ARROW_DEFLECT,
+    UNARMED_ARROW_DEFLECT(1),
     UNARMED_BERSERK(1),
     UNARMED_BLOCK_CRACKER,
-    UNARMED_DISARM,
-    UNARMED_IRON_ARM_STYLE,
-    UNARMED_IRON_GRIP,
+    UNARMED_DISARM(1),
+    UNARMED_IRON_ARM_STYLE(5),
+    UNARMED_IRON_GRIP(1),
 
     /* Woodcutting */
 /*    WOODCUTTING_BARK_SURGEON(3),*/
